# PSTInsight

./: .gitattributes  App.config  App.xaml  App.xaml.cs  AppSettings.cs  AsyncRelayCommand.cs  CONTEXT.md  CustomTitleBar.xaml  CustomTitleBar.xaml.cs  DarkTheme.xaml  EmailItem.cs  Installer_Script.iss  MainWindow.xaml  MainWindow.xaml.cs  MessageView.cs  PSTInsight.csproj  PSTInsight.sln  PstService.cs  README.md  WatermarkService.cs  XstMessageExtensions.cs  index.html  package-lock.json  package.json  packages.config
.github/workflows/: ci.yml  release.yml
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
pst-parse/: Cargo.toml  README.md
pst-parse/examples/: dump.rs
pst-parse/src/: encoding.rs  error.rs  export.rs  lib.rs  ltp.rs  messaging.rs  named.rs  ndb.rs  prop.rs  rtf.rs  util.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  export.rs  lib.rs  main.rs  msg.rs  state.rs
src/components/: FolderTree.tsx  HtmlBody.tsx  MessageList.tsx  MessagePreview.tsx  SearchResults.tsx  Toolbar.tsx
src/lib/: api.ts  format.ts
