[package]
name = "pstinsight"
version = "1.0.2"
description = "A fast, modern viewer for Outlook PST files"
authors = ["Swatto"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pstinsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pst-parse = { path = "../pst-parse" }
cfb = "0.14"
uuid = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
